added concept specs

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,5 @@
-GEMINI_API_KEY=AIzaSyCb1WP_gpRspD6jCAutzvYZ7-m5MKLSFgA
+GEMINI_API_KEY=INSERT-KEY-HERE
 GEMINI_MODEL=gemini-2.5-flash
 GEMINI_CONFIG=./geminiConfig.json
-MONGODB_URL=mongodb+srv://akessah:mFUKqU2BID87VVz6@cluster0.tlkqbvb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URL=mongodb+srv://akessah:<INSERT-PASSWORD-HERE>@cluster0.tlkqbvb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 DB_NAME=Skrib_DB
